<resources>
    <string name="app_name">DeliverEat</string>
    <string name="action_settings">Settings</string>
    <string name="continue_buying">Continuar</string>
    <string name="confirm_buy">Confirmar Compra</string>
    <string name="precio">Precio</string>
    <string name="x_cantidad">x%s</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="subtotal">Subtotal</string>
    <string name="detalles_de_entrega">Detalles de entrega</string>
    <string name="direccion">Dirección</string>
    <string name="editar">Editar</string>
    <string name="forma_de_pago">Forma de pago</string>
    <string name="horario_de_entrega">Horario de entrega</string>
    <string name="ciudad">Ciudad*</string>
    <string name="referencias">Referencias</string>
    <string name="numero">Número*</string>
    <string name="calle">Calle*</string>
    <string name="guardar">Guardar</string>
    <string name="efectivo">Efectivo</string>
    <string name="tarjeta">Tarjeta</string>
    <string name="cvv">CVV*</string>
    <string name="fecha_de_vencimiento">Fecha de vencimiento*</string>
    <string name="apellido">Apellido*</string>
    <string name="nombre">Nombre*</string>
    <string name="n_mero_de_tarjeta">Número de Tarjeta*</string>
    <string name="monto">Monto*</string>
    <string name="recibir_lo_antes_posible">Recibir lo antes posible</string>
    <string name="fecha_de_entrega">Fecha de Entrega</string>
    <string name="hora_de_entrega">Hora de Entrega</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
