<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.pay.PayActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="58dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/enviar_ahora"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:checked="true"
                android:layout_margin="16dp"
                android:textAppearance="@style/TextAppearance.MyTheme.Subtitle1"
                android:text="@string/recibir_lo_antes_posible" />

            <LinearLayout
                android:id="@+id/date_picker_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/fechaIl"
                        android:enabled="false"
                        android:clickable="false"
                        android:focusable="false"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/fechaEt"
                            android:enabled="false"
                            android:clickable="false"
                            android:focusable="false"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/fecha_de_entrega" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <FrameLayout
                        android:id="@+id/fechaContainer"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:clickable="true"
                        android:focusable="true"
                        android:background="@android:color/transparent"
                        android:baselineAligned="false" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/timeIl"
                        android:enabled="false"
                        android:clickable="false"
                        android:focusable="false"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/timeEt"
                            android:enabled="false"
                            android:clickable="false"
                            android:focusable="false"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hora_de_entrega" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <FrameLayout
                        android:id="@+id/timeContainer"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:clickable="true"
                        android:focusable="true"
                        android:background="@android:color/transparent"
                        android:baselineAligned="false" />
                </FrameLayout>
            </LinearLayout>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.appbar.AppBarLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            app:layout_scrollFlags="scroll|enterAlways"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary" />

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/guardar_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:text="@string/guardar"
        android:layout_margin="@dimen/default_fab_margin"
        app:backgroundTint="@color/color_secondary"
        android:textColor="@color/color_on_secondary"
        app:rippleColor="@color/color_secondary_variant" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>